clusters/homelab/data-storage/configs/minio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: minio
spec:
  hosts:
  - minio.${PUBLIC_DOMAIN}
  gateways:
  - istio-system/minio
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minio.minio.svc.cluster.local
        port:
          number: 9001
